--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,61 +1,3 @@
-.main-split-container {
-  display: flex;
-  background: white;
-  width: 100%;
-  max-width: 850px; 
-  border-radius: 40px;
-  overflow: hidden;
-  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
-}
-
-.side-panel-left {
-  background-color: #f8fafc; 
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 40px;
-  border-right: 1px solid #e2e8f0;
-
-  .logo-box {
-    width: 150px;
-    height: 150px;
-    background: transparent;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    margin-bottom: 25px;
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  }
-
-  .side-panel-text {
-    text-align: center;
-    max-width: 240px;
-  }
-
-  .panel-title {
-    font-size: 16px;
-    font-weight: 500;
-    color: #0f172a;
-    margin: 0 0 8px;
-  }
-
-  .panel-description {
-    font-size: 13px;
-    font-weight: 400;
-    color: #64748b;
-    line-height: 1.5;
-    margin: 0;
-  }
-}
-
 .login-wrapper {
   display: flex;
   flex-direction: column;
@@ -63,12 +5,14 @@
   justify-content: center;
   min-height: 100%;
   padding: 20px;
-  background-color: #f1f5f9;
 
   .login-card {
     background: white;
-    width: 60%; 
-    padding: 40px 45px; 
+    width: 100%;
+    max-width: 360px;
+    padding: 40px 25px;
+    border-radius: 24px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.4);
     text-align: center;
   }
 }
@@ -80,14 +24,9 @@
     color: #1A3D63;
     margin-bottom: 4px; 
   }
+
 }
 
-.login-subtext {
-  font-size: 13px;
-  font-weight: 700;
-  color: #94a3b8; 
-  margin-top: 6px;
-}
 
 .input-group {
   margin-bottom: 22px;
@@ -101,8 +40,7 @@
   }
 
   .input-item-box {
-    justify-content: space-between;
-    background: #f8fafc; 
+    background: #f8fafc;
     border: 1px solid #e2e8f0;
     border-radius: 12px;
     height: 52px;
@@ -140,7 +78,7 @@
 .forgot-text {
   margin-top: 15px;
   text-align: left;
-  color: #2563eb;
+  color: #1A3D63;
   font-weight: 700;
   font-size: 14px;
   cursor: pointer;
@@ -152,24 +90,4 @@
     color: #64748b; 
     font-size: 14px; 
   }
-}
-
-.password-eye {
-  font-size: 20px;
-  color: #94a3b8;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-}
-
-.password-label-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 8px;
-}
-
-.password-label-row .forgot-text {
-  margin: 0;
-  font-size: 12px;
 }
