--- a/src/app/pages/supervisor/supervisor.page.html
+++ b/src/app/pages/supervisor/supervisor.page.html
@@ -9,7 +9,7 @@
             <h1>¡Hola, Ricardo!</h1>
             <p class="fecha-subtitle">{{fechaHoy}}</p>
           </div>
-          <ion-icon name="menu-outline" class="menu-icon" (click)="setVista('menu')"></ion-icon>
+          <ion-icon name="log-out-outline" class="logout-icon" (click)="cerrarSesion()"></ion-icon>
         </div>
 
           <!--El supervisor tambien podra cambiar las lineas que tiene a cargo para ver a los 
@@ -40,73 +40,6 @@
           </button>
         </div>
       </ng-container>
-
-      <!--Menú hamburguesa-->
-      <div class="page-container" *ngIf="vista === 'menu'">
-        <div class="header-section">
-          <div class="header-with-back" (click)="setVista('lista')" style="cursor: pointer;">
-            <button class="back-btn">
-              <ion-icon name="arrow-back-outline"></ion-icon>
-            </button>
-            <span class="regresar-text">REGRESAR</span>
-          </div>
-        </div>
-
-        <div class="seccion-anuncios">
-          <div class="cabecera-anuncios">
-            <ion-icon name="megaphone-outline" class="icono-azul"></ion-icon>
-            <span class="titulo-tablon">ANUNCIOS</span>
-          </div>
-
-          <div class="lista-tarjetas">
-            <div class="tarjeta-info">
-              <div class="fila-superior">
-                <span class="tag tag-seguridad">SEGURIDAD</span>
-                <span class="fecha">Hoy</span>
-              </div>
-              <p class="titulo-nota">Aviso de seguridad</p>
-            </div>
-
-            <div class="tarjeta-info">
-              <div class="fila-superior">
-                <span class="tag tag-sistemas">SISTEMAS</span>
-                <span class="fecha">Mañana</span>
-              </div>
-              <p class="titulo-nota">Mantenimiento Programado</p>
-            </div>
-
-            <div class="tarjeta-info">
-              <div class="fila-superior">
-                <span class="tag tag-rh">RH</span>
-                <span class="fecha">25 Feb</span>
-              </div>
-              <p class="titulo-nota">Nuevos Horarios de Comedor</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="seccion-recursos">
-          <p class="subtitulo-gris">RECURSOS DE CONSULTA</p>
-          <div class="enlace-recurso">
-            <span><ion-icon name="document-text-outline"></ion-icon> Manual de Usuario</span>
-            <ion-icon name="chevron-forward-outline" class="flechita"></ion-icon>
-          </div>
-          <div class="enlace-recurso">
-            <span><ion-icon name="shield-checkmark-outline"></ion-icon> Reglamento Interno</span>
-            <ion-icon name="chevron-forward-outline" class="flechita"></ion-icon>
-          </div>
-          <div class="enlace-recurso">
-            <span><ion-icon name="help-circle-outline"></ion-icon> Soporte Técnico</span>
-            <ion-icon name="chevron-forward-outline" class="flechita"></ion-icon>
-          </div>
-        </div>
-
-        <div class="menu-footer" style="margin-top: auto; padding-top: 20px;">
-          <button class="logout-menu-btn" (click)="cerrarSesion()">
-            <ion-icon name="log-out-outline"></ion-icon> Cerrar Sesión
-          </button>
-        </div>
-      </div>
 
       <ng-container *ngIf="vista === 'detalle'">
         <div class="header-section">
@@ -171,6 +104,8 @@
             <p>{{ empleadoSeleccionado?.claseEstado === 'incapacidad' ? 'TERMINAR ESTADO' : 'REGISTRAR INCAPACIDAD' }}</p>
           </div>
 
+            <!--El supervisor tambien podra mandar una solicitud de suspension a un operador cambaindo el 
+            estado de este hasta Rh decida si se autoriza o no la suspension-->
           <div class="action-box"
                [ngClass]="{
                  'active-blue': empleadoSeleccionado?.claseEstado === 'suspension',
