Actualizacion de tema oscuro y claro
Se agregaron y cambiaron variables de uso de color en la aplicacion. Tambien ciertas paginas recibieron una actualizacion referente al tema de colores tanto para oscuro y claro, cambio de tamaño de fuente de letra y estilo de formularios

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,9 +2,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+    <app-background-layout>
   <div class="login-wrapper">
     <div class="main-split-container">
-      
+
       <!--Panel izquierdo-->
       <div class="side-panel-left">
         <div class="logo-box">
@@ -44,9 +45,9 @@
             </div>
 
             <div class="input-item-box">
-              <input 
-                [type]="showPassword ? 'text' : 'password'" 
-                placeholder="Ingrese su contraseña" 
+              <input
+                [type]="showPassword ? 'text' : 'password'"
+                placeholder="Ingrese su contraseña"
                 class="native-input">
 
               <ion-icon
@@ -66,7 +67,8 @@
         </div>
 
       </div>
-      
+
     </div>
   </div>
+  </app-background-layout>
 </ion-content>
