--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,15 +1,14 @@
 .main-split-container {
   display: flex;
-  background: white;
   width: 100%;
-  max-width: 850px; 
+  max-width: 1024px;
   border-radius: 40px;
   overflow: hidden;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+  margin: auto;
 }
 
 .side-panel-left {
-  background-color: #f8fafc; 
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -43,14 +42,14 @@
   .panel-title {
     font-size: 16px;
     font-weight: 500;
-    color: #0f172a;
+    color: ion-text-title;
     margin: 0 0 8px;
   }
 
   .panel-description {
     font-size: 13px;
     font-weight: 400;
-    color: #64748b;
+    color: ion-border-color;
     line-height: 1.5;
     margin: 0;
   }
@@ -61,14 +60,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex: 1;
   min-height: 100%;
-  padding: 20px;
-  background-color: #f1f5f9;
+  padding: 5rem;
 
   .login-card {
-    background: white;
-    width: 60%; 
-    padding: 40px 45px; 
+    background: card-background;
+    width: 30rem;
+    max-width: 35rem;
+    padding: 40px 45px;
+    justify-content: center;
     text-align: center;
   }
 }
@@ -77,15 +78,15 @@
   .title-text {
     font-size: 28px;
     font-weight: 800;
-    color: #1A3D63;
-    margin-bottom: 4px; 
+    color: ion-text-color;
+    margin-bottom: 4px;
   }
 }
 
 .login-subtext {
   font-size: 13px;
   font-weight: 700;
-  color: #94a3b8; 
+  color: ion-text-color-step-300;
   margin-top: 6px;
 }
 
@@ -97,12 +98,12 @@
     font-size: 13px;
     font-weight: 700;
     margin-bottom: 8px;
-    color: #475569;
+    color: ion-color-primary;
   }
 
   .input-item-box {
     justify-content: space-between;
-    background: #f8fafc; 
+    background: ion-item-background;
     border: 1px solid #e2e8f0;
     border-radius: 12px;
     height: 52px;
@@ -120,8 +121,8 @@
 
 // Boton
 .custom-login-button {
-  background: #1A3D63 !important;
-  color: white !important;
+  background: ion-border-color !important;
+  color: ion-text-color !important;
   width: 100%;
   max-width: 260px;
   height: 54px;
@@ -140,7 +141,7 @@
 .forgot-text {
   margin-top: 15px;
   text-align: left;
-  color: #2563eb;
+  color: #3498db;
   font-weight: 700;
   font-size: 14px;
   cursor: pointer;
@@ -148,9 +149,9 @@
 
 .register-section {
   margin-top: 30px;
-  .no-account-text { 
-    color: #64748b; 
-    font-size: 14px; 
+  .no-account-text {
+    color: ion-color-primary-contrast;
+    font-size: 14px;
   }
 }
 
