--- a/src/app/pages/operador/operador.page.html
+++ b/src/app/pages/operador/operador.page.html
@@ -1,7 +1,8 @@
 <ion-content [fullscreen]="true">
+      <app-background-layout>
   <div class="operator-wrapper">
     <div class="operator-card">
-      
+
       <div class="page-container" *ngIf="view === 'dashboard'">
         <header class="header-main">
           <div class="welcome-header">
@@ -150,4 +151,5 @@
 
     </div>
   </div>
+  </app-background-layout>
 </ion-content>
